plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '2.7.12'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'es.proin'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
	mavenCentral()
}

dependencies {

	implementation  fileTree(include: ['*.jar'], dir: 'libs')

	implementation  'org.springframework.boot:spring-boot-starter-web',
				    'org.springframework.boot:spring-boot-starter-thymeleaf',
					"org.springframework.boot:spring-boot-starter-data-jpa",
					'org.springframework.boot:spring-boot-starter-security',
					'org.springframework.boot:spring-boot-starter-validation',
					'org.springframework.boot:spring-boot-starter-actuator',

					'org.webjars:bootstrap:4.0.0-2',
					'org.webjars:webjars-locator:0.30',
					'org.projectlombok:lombok',
					'org.modelmapper:modelmapper:3.1.0',
					'org.jeasy:easy-random-core:5.0.0',
					'org.jeasy:easy-random-randomizers:5.0.0'

	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat',
					'com.h2database:h2:1.4.192'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
